src/test/deca/syntax/valid/synt/method_call.deca
/*
    Description : appel de méthode sur un objet défini

    Résultat : OK
*/
class A{
    int x(){
        return 5;
    }
}
class B
{
    int x = A.x();
}
