src/test/deca/syntax/invalid/public_field_access.deca
/*
    Description : accés à un champ public

    Résultat : OK
*/
class A{
    public int x;
}
{
    A u = new A();

    u.x;
}
